moved scorecard code out of rounds new page

--- a/views/scorecard/new.ejs
+++ b/views/scorecard/new.ejs
@@ -29,7 +29,7 @@
                             5
                         </span>
                         <span>
-                            <input type="number" name="1" value="">
+                            <input type="number" name="one" value="">
                         </span>
                     </div>
                     <div class="hole-info">
@@ -40,7 +40,7 @@
                             4
                         </span>
                         <span>
-                            <input type="number" name="2" value="">
+                            <input type="number" name="two" value="">
                         </span>
                     </div>
                     <div class="hole-info">
@@ -51,7 +51,7 @@
                             4
                         </span>
                         <span>
-                            <input type="number" name="3" value="">
+                            <input type="number" name="three" value="">
                         </span>
                     </div>
                     <div class="hole-info">
@@ -62,7 +62,7 @@
                             3
                         </span>
                         <span>
-                            <input type="number" name="4" value="">
+                            <input type="number" name="four" value="">
                         </span>
                     </div>
                     <div class="hole-info">
@@ -73,7 +73,7 @@
                             4
                         </span>
                         <span>
-                            <input type="number" name="5" value="">
+                            <input type="number" name="five" value="">
                         </span>
                     </div>
                     <div class="hole-info">
@@ -84,7 +84,7 @@
                             4
                         </span>
                         <span>
-                            <input type="number" name="6" value="">
+                            <input type="number" name="six" value="">
                         </span>
                     </div>
                     <div class="hole-info">
@@ -95,7 +95,7 @@
                             5
                         </span>
                         <span>
-                            <input type="number" name="7" value="">
+                            <input type="number" name="seven" value="">
                         </span>
                     </div>
                     <div class="hole-info">
@@ -106,7 +106,7 @@
                             3
                         </span>
                         <span>
-                            <input type="number" name="8" value="">
+                            <input type="number" name="eight" value="">
                         </span>
                     </div>
                     <div class="hole-info">
@@ -117,8 +117,19 @@
                             4
                         </span>
                         <span>
-                            <input type="number" name="9" value="">
+                            <input type="number" name="nine" value="">
                         </span>
+                    </div>
+                </div>
+                <div class="card-labels">
+                    <div class="">
+                        <span>Out</span>
+                    </div>
+                    <div class="">
+                        <span>36</span>
+                    </div>
+                    <div class="">
+                        <span> </span>
                     </div>
                 </div>
                 <div class="back-9">
@@ -130,7 +141,7 @@
                             5
                         </span>
                         <span>
-                            <input type="number" name="10" value="">
+                            <input type="number" name="ten" value="">
                         </span>
                     </div>
                     <div class="hole-info">
@@ -141,7 +152,7 @@
                             4
                         </span>
                         <span>
-                            <input type="number" name="11" value="">
+                            <input type="number" name="eleven" value="">
                         </span>
                     </div>
                     <div class="hole-info">
@@ -152,7 +163,7 @@
                             4
                         </span>
                         <span>
-                            <input type="number" name="12" value="">
+                            <input type="number" name="twelve" value="">
                         </span>
                     </div>
                     <div class="hole-info">
@@ -163,7 +174,7 @@
                             3
                         </span>
                         <span>
-                            <input type="number" name="13" value="">
+                            <input type="number" name="thirteen" value="">
                         </span>
                     </div>
                     <div class="hole-info">
@@ -174,7 +185,7 @@
                             4
                         </span>
                         <span>
-                            <input type="number" name="14" value="">
+                            <input type="number" name="fourteen" value="">
                         </span>
                     </div>
                     <div class="hole-info">
@@ -185,7 +196,7 @@
                             4
                         </span>
                         <span>
-                            <input type="number" name="15" value="">
+                            <input type="number" name="fifteen" value="">
                         </span>
                     </div>
                     <div class="hole-info">
@@ -196,7 +207,7 @@
                             5
                         </span>
                         <span>
-                            <input type="number" name="16" value="">
+                            <input type="number" name="sixteen" value="">
                         </span>
                     </div>
                     <div class="hole-info">
@@ -207,7 +218,7 @@
                             3
                         </span>
                         <span>
-                            <input type="number" name="17" value="">
+                            <input type="number" name="seventeen" value="">
                         </span>
                     </div>
                     <div class="hole-info">
@@ -218,12 +229,24 @@
                             4
                         </span>
                         <span>
-                            <input type="number" name="18" value="">
+                            <input type="number" name="eighteen" value="">
                         </span>
                     </div>
                 </div>
-                <input type="submit" name="" value="Submit Scorecard">
-            </form>
+                <div class="card-labels">
+                    <div class="">
+                        <span>In</span>
+                    </div>
+                    <div class="">
+                        <span>36</span>
+                    </div>
+                    <div class="">
+                        <span> </span>
+                    </div>
+                </div>
+
+            <input type="submit" name="" value="Submit Scorecard">
+        </form>
         </div>
 
     </body>
