--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,16 @@ body {
     height: 100vh;
     width: 95%;
     margin: 10px auto;
-    background-color: rgba(150, 200, 255, .8);
+    background-color: #434445;
+}
+
+.main-container {
+    background-image: url(https://www.johncordeira.com/wp-content/uploads/2014/06/Sunset-Golf-Course.jpg);
+    height: 100vh;
+    width: 100vw;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding-top: 20px;
 }
 
 a {
@@ -25,6 +34,11 @@ nav > ul {
     background-color: white;
 }
 
+.brand-logo {
+    color: white;
+    font-size: 30px;
+}
+
 .header {
     display: flex;
     justify-content: center;
@@ -39,15 +53,18 @@ nav > ul {
     border-radius: 5px;
     background: white;
     color: blue;
-    height: 80px;
+    height: 65px;
     width: 150px;
+    margin: 0 20px;
 }
+
 
 ul {
     padding: 5px;
     border: 1px solid grey;
     border-radius: 5px;
-    background-color: gainsboro;
+    background-color: white;
+    margin: 10px;
 }
 
 li {
@@ -59,8 +76,16 @@ li {
 }
 
 .handicap {
-    text-align: right;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    margin: 20px;
+    margin-bottom: 0;
+    color: white;
+    font-size: 16px;
 }
+
 
 .scorecard {
     display: flex;
