--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,10 +1,10 @@
-<a href="/rounds" class="brand-logo left">Handicap Tracker</a>
+<a href="/rounds" class="brand-logo">Handicap Tracker</a>
 <ul class="right">
   <% if (currentUser) { %>
   <div>Welcome <%=currentUser.username%></div>
   <div>
     <form action="/sessions?_method=DELETE" method="POST">
-      <input type="submit" value="Log Out" class="btn-small blue" />
+      <input type="submit" value="Log Out" />
     </form>
   </div>
   <% } else { %>
