--- a/public/css/main.css
+++ b/public/css/main.css
@@ -117,3 +117,32 @@ li {
 span > input {
     width: 30px;
 }
+
+form {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+fieldset {
+    border: 1px solid white;
+    border-radius: 5px;
+    width: 175px;
+}
+
+legend {
+    color: white;
+}
+
+input {
+    border-radius: 5px;
+    height: 25px;
+    width: 125px;
+}
+
+.top-form, .bottom-form {
+    display: flex;
+    margin-bottom: 10px;
+}
