--- a/views/rounds/edit.ejs
+++ b/views/rounds/edit.ejs
@@ -7,21 +7,24 @@
         <nav>
             <%- include ('../partials/nav.ejs') %>
         </nav>
-        <blockquote>
-            <h1>Edit Round</h1>
-            <form class="" action="/scores/<%=score.id%>?_method=PUT" method="post">
-                <label for="course">course</label>
-                <input type="text" name="course" value="<%=score.course%>" /><br>
-                <label for="score">score</label>
-                <input type="text" name="score" value="<%=score.score%>"/><br>
-                <label for="tees">tees</label>
-                <input type="text" name="tees" value="<%=score.tees%>" /><br>
-                <label for="date">date</label>
-                <input type="text" name="date" value="<%=score.date%>" /><br>
-                <br>
-                <input type="submit" name="" value="Submit Log">
-            </form>
-        </blockquote>
+        <div class="main-container">
+            <blockquote>
+                <h1>Edit Round</h1>
+                <form class="" action="/rounds/<%=round.id%>?_method=PUT" method="post">
+                    <label for="course">course</label>
+                    <input type="text" name="course" value="<%=round.course%>" /><br>
+                    <label for="score">score</label>
+                    <input type="text" name="score" value="<%=round.score%>"/><br>
+                    <label for="tees">tees</label>
+                    <input type="text" name="tees" value="<%=round.tees%>" /><br>
+                    <label for="date">date</label>
+                    <input type="text" name="date" value="<%=round.date%>" /><br>
+                    <br>
+                    <input type="submit" name="" value="Submit Log">
+                </form>
+            </blockquote>
+        </div>
+
         <script src="/js/app.js" charset="utf-8"></script>
     </body>
 </html>
