--- a/views/rounds/new.ejs
+++ b/views/rounds/new.ejs
@@ -7,32 +7,44 @@
         <nav>
             <%- include ('../partials/nav.ejs') %>
         </nav>
+        <div class="main-container">
             <h1>New Score</h1>
             <form class="" action="/rounds" method="POST">
-                <label for="course">Course</label>
-                <select id = "courseList" name="course">
-                   <option value = "home">home</option>
-                   <option value = "away">away</option>
-                </select>
-                <br>
-                <!-- <input type="text" name="course" /><br> -->
-                <label for="score">Score</label>
-                <input type="text" name="score" />
-                <br>
-                <label for="tees">Tees</label>
-                <select id = "teesList" name="tees">
-                   <option value = "back">back</option>
-                   <option value = "middle">middle</option>
-                   <option value = "forward">forward</option>
-                </select>
-                <br>
-                <label for="date">Date</label>
-                <input type="date" name="date" />
-                <br>
+                <!-- <label for="course">Course</label> -->
+                <div class="top-form">
+                    <fieldset>
+                        <legend>Course</legend>
+                        <select id = "courseList" name="course">
+                           <option value = "home">home</option>
+                           <option value = "away">away</option>
+                        </select>
+                    </fieldset>
+                    <fieldset>
+                        <legend>Tees</legend>
+                        <select id = "teesList" name="tees">
+                           <option value = "back">back</option>
+                           <option value = "middle">middle</option>
+                           <option value = "forward">forward</option>
+                        </select>
+                    </fieldset>
+                </div>
+                <div class="bottom-form">
+                    <fieldset>
+                        <legend>Score</legend>
+                        <input type="text" name="score" />
+                    </fieldset>
+                    <fieldset>
+                        <legend>Date</legend>
+                        <input type="date" name="date" />
+                    </fieldset>
+                </div>
+
                 <input type="submit" name="" value="Submit Score">
             </form>
             <!-- <a href="/scorecard/new">Input full scorecard</a> -->
             </div>
+        </div>
+
         <script src="/js/app.js" charset="utf-8"></script>
     </body>
 </html>
