--- a/views/rounds/new.ejs
+++ b/views/rounds/new.ejs
@@ -11,7 +11,7 @@
             <h1>New Score</h1>
             <form class="" action="/rounds" method="POST">
                 <!-- <label for="course">Course</label> -->
-                <div class="top-form">
+                <div class="form">
                     <fieldset>
                         <legend>Course</legend>
                         <select id = "courseList" name="course">
@@ -28,7 +28,7 @@
                         </select>
                     </fieldset>
                 </div>
-                <div class="bottom-form">
+                <div class="form">
                     <fieldset>
                         <legend>Score</legend>
                         <input type="text" name="score" />
