--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -4,17 +4,22 @@
     <%- include ('../partials/head.ejs') %>
   </head>
   <body>
-    <header>
-        <%- include ('../partials/header.ejs') %>
-    </header>
-    <div class="container">
+    <nav>
+        <%- include ('../partials/nav.ejs') %>
+    </nav>
+    <div class="main-container">
       <h1>New User</h1>
       <form action="/users" method="POST">
-        <label for="name">User Name:</label>
-        <input type="text" name="username" required/>
-        <label for="color">Password:</label>
-        <input type="password" name="password" required/>
-        <br>
+          <div class="form">
+              <fieldset>
+                  <legend>User Name</legend>
+                  <input type="text" name="username" required/>
+              </fieldset>
+              <fieldset>
+                  <legend>Password</legend>
+                  <input type="password" name="password" required/>
+              </fieldset>
+          </div>
         <input type="submit" value="Submit">
       <form>
     </div>
