--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,9 +2,9 @@
 <ul class="right">
   <% if (currentUser) { %>
   <div class="welcome">Welcome <%=currentUser.username%></div>
-  <div>
+  <div id="logout">
     <form action="/sessions?_method=DELETE" method="POST">
-      <input type="submit" value="Log Out" />
+      <input type="submit" value="Log Out" id="btn" />
     </form>
   </div>
   <% } else { %>
