--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,7 @@
 
 body {
     height: 100vh;
-    width: 95%;
+    width: 100%;
     margin: 10px auto;
     background-color: white;
 }
@@ -48,6 +48,15 @@ nav > ul {
     font-size: 20px;
     background-color: white;
     height: 60px;
+}
+
+.round-info {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: left;
+    width: 20%;
+    margin: auto;
 }
 
 #logout {
