finishing up styles

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,7 +8,7 @@
     </form>
   </div>
   <% } else { %>
-  <li><a href="/users/new">Sign Up</a></li>
-  <li><a href="/sessions/new">Log In</a></li>
+  <li><a href="/users/new" class="nav-signup">Sign Up</a></li>
+  <li><a href="/sessions/new" class="nav-login">Log In</a></li>
   <% } %>
 </ul>
