--- a/views/rounds/new.ejs
+++ b/views/rounds/new.ejs
@@ -39,7 +39,7 @@
                     </fieldset>
                 </div>
 
-                <input type="submit" name="" value="Submit Score">
+                <input type="submit" class="submit-btn" value="Submit Score">
             </form>
             <!-- <a href="/scorecard/new">Input full scorecard</a> -->
             </div>
