--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,6 +8,7 @@ body {
     width: 100%;
     margin: 10px auto;
     background-color: white;
+    font-family: 'Lato', sans-serif;
 }
 
 .main-container {
@@ -37,6 +38,7 @@ a {
     margin: 5px;
     color: #a6110c;
 }
+
 nav {
     text-align: center;
     margin: 20px;
@@ -45,18 +47,41 @@ nav {
 nav > ul {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     font-size: 20px;
     background-color: white;
     height: 60px;
 }
+
+nav > ul > li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    border: none;
+}
+
+
 
 .round-info {
     display: flex;
     justify-content: center;
     flex-direction: column;
     text-align: left;
-    width: 20%;
+    width: 25%;
     margin: auto;
+    color: #a6110c;
+}
+
+.round-info > div {
+    margin: 5px 0;
+    font-size: 20px;
+}
+
+.round-info > div > span {
+    color: white;
+    margin-right: 4px;
+    border-bottom: 1px solid rgba(255, 255, 255, .5)
 }
 
 #logout {
@@ -68,6 +93,24 @@ nav > ul {
 #btn {
     color: #a6110c;
     box-shadow: 2px 2px 2px gainsboro;
+    font-size: 15px;
+    height: 35px;
+}
+
+.edit-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid gainsboro;
+    background: white;
+    border-radius: 5px;
+    height: 25px;
+    width: 125px;
+}
+
+.submit-btn {
+    font-size: 15px;
+    color: #a6110c;
 }
 
 .brand-logo {
@@ -116,8 +159,8 @@ li {
     list-style: none;
     margin: 10px 0;
     border-bottom: 1px solid grey;
+    font-size: 20px;
 }
-
 
 
 .handicap {
@@ -186,4 +229,10 @@ input {
 .form {
     display: flex;
     margin-bottom: 10px;
+}
+
+.edit-delete {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
 }
