--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,3 +1,4 @@
 <meta charset="utf-8">
 <title>Handicap Tracker</title>
 <link rel="stylesheet" href="/css/main.css">
+<link href="https://fonts.googleapis.com/css?family=Lato|Poppins&display=swap" rel="stylesheet">
