--- a/views/rounds/edit.ejs
+++ b/views/rounds/edit.ejs
@@ -39,7 +39,7 @@
                             <input type="date" name="date" value="<%=round.date%>"/>
                         </fieldset>
                     </div>
-                    <input type="submit" name="" value="Submit Log">
+                    <input type="submit" class="submit-btn" value="Submit Log">
                 </form>
             </blockquote>
         </div>
