--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -20,7 +20,7 @@
                   <input type="password" name="password" required/>
               </fieldset>
           </div>
-        <input type="submit" value="Submit">
+        <input type="submit" class="submit-btn" value="Submit">
       <form>
     </div>
   </body>
