--- a/views/rounds/new.ejs
+++ b/views/rounds/new.ejs
@@ -35,7 +35,7 @@
                     </fieldset>
                     <fieldset>
                         <legend>Date</legend>
-                        <input type="date" name="date" />
+                        <input type="date" name="date" id="date-btn" />
                     </fieldset>
                 </div>
 
