--- a/views/rounds/new.ejs
+++ b/views/rounds/new.ejs
@@ -44,6 +44,9 @@
             <!-- <a href="/scorecard/new">Input full scorecard</a> -->
             </div>
         </div>
+        <footer>
+            <%- include ('../partials/footer.ejs') %>
+        </footer>
 
         <script src="/js/app.js" charset="utf-8"></script>
     </body>
