--- a/public/css/main.css
+++ b/public/css/main.css
@@ -256,3 +256,24 @@ select {
 #date-btn {
     cursor: pointer;
 }
+
+footer {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    align-items: center;
+    border-top: 1px solid grey;
+}
+
+.made-by {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+}
+
+h3 {
+    margin-left: 5px;
+    color: #0e4b8a;
+    font-size: 15px;
+}
