--- a/views/rounds/edit.ejs
+++ b/views/rounds/edit.ejs
@@ -43,6 +43,9 @@
                 </form>
             </blockquote>
         </div>
+        <footer>
+            <%- include ('../partials/footer.ejs') %>
+        </footer>
 
         <script src="/js/app.js" charset="utf-8"></script>
     </body>
