--- a/views/rounds/index.ejs
+++ b/views/rounds/index.ejs
@@ -46,7 +46,7 @@
             <% } %>
         </div>
         <footer>
-
+            <%- include ('../partials/footer.ejs') %>
         </footer>
         <script src="/js/app.js" charset="utf-8"></script>
     </body>
