--- a/views/rounds/show.ejs
+++ b/views/rounds/show.ejs
@@ -33,6 +33,9 @@
             </div>
 
         </div>
+        <footer>
+            <%- include ('../partials/footer.ejs') %>
+        </footer>
 
         <script src="/js/app.js" charset="utf-8"></script>
     </body>
