--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -23,5 +23,8 @@
         <input type="submit" class="submit-btn" value="Submit">
       <form>
     </div>
+    <footer>
+        <%- include ('../partials/footer.ejs') %>
+    </footer>
   </body>
 </html>
